# rust-zero2prod

./: .env  Cargo.toml  Dockerfile  README  README.md  configuration.yaml
config/: base.yaml
migrations/: 20230625150657_add_status_into_subscriptions.sql  20230626124829_add_confirmation_token_into_subscriptions.sql  20230630101833_create_users_table.sql
src/: auth.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domains/: mod.rs  subscriber.rs  subscribers.rs  users.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
